# final-nn

./: README.md  autoencoder.ipynb  classifier.ipynb  pyproject.toml
.github/workflows/: test.yml
nn/: __init__.py  nn.py  preprocess.py
test/: test_nn.py
