[build-system]
requires = [
	"flit_core >=3.2,<4"
]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "neural network"
authors = [{name = "Eden Chun", email = "eden.chun@ucsf.edu"}]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest",
    "numpy"
]

[project.urls]
Home = "https://github.com/ekchun/final-nn"